done : fix nav spacing

--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,4 +1,6 @@
-
+.nav-item{
+    padding-left: 10px;
+}
 
 
 
